# fashion-hub

./: .env  .gitignore  pyproject.toml
fashion_hub_backend/: errors.py
fashion_hub_backend/database/: db_setup.py
fashion_hub_backend/database/categories/: models.py
fashion_hub_backend/database/order_items/: models.py
fashion_hub_backend/database/orders/: models.py
fashion_hub_backend/database/payments/: models.py
fashion_hub_backend/database/products/: models.py
fashion_hub_backend/database/users/: models.py
fashion_hub_backend/interface/fastapi/: app.py  app_config.py
fashion_hub_backend/interface/fastapi/authentication/: routes.py
fashion_hub_backend/interface/fastapi/categories/: routes.py
fashion_hub_backend/interface/fastapi/order_items/: routes.py
fashion_hub_backend/interface/fastapi/orders/: routes.py
fashion_hub_backend/interface/fastapi/payments/: routes.py
fashion_hub_backend/interface/fastapi/products/: routes.py
fashion_hub_backend/interface/fastapi/users/: routes.py
fashion_hub_backend/schemas/authentication/: schemas.py
fashion_hub_backend/schemas/categories/: schemas.py
fashion_hub_backend/schemas/order_items/: schemas.py
fashion_hub_backend/schemas/orders/: schemas.py
fashion_hub_backend/schemas/payments/: schemas.py
fashion_hub_backend/schemas/products/: schemas.py
fashion_hub_backend/schemas/users/: schemas.py
fashion_hub_backend/service/authentication/: service.py
fashion_hub_backend/service/categories/: service.py
fashion_hub_backend/service/order_items/: service.py
fashion_hub_backend/service/orders/: service.py
fashion_hub_backend/service/payments/: service.py
fashion_hub_backend/service/products/: service.py
fashion_hub_backend/service/users/: service.py
fashion_hub_backend/utils/: base_schemas.py  enums.py  hashing.py  oauth2.py  token.py
