[tool.poetry]
name = "fashion-hub"
version = "0.1.0"
description = ""
authors = ["Vaghasiya, Ravibhai (EXTERN: IAV GmbH) <ravibhai.vaghasiya@iav.de>"]
readme = "README.md"
packages = [{ include = "fashion_hub_backend", from = "." }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
pandas = "^2.1.3"
python-multipart = "^0.0.6"
strenum = "^0.4.15"
jinja2 = "^3.1.2"
langchain = "^0.2.16"
text-generation = ">=0.7.0"
langchain-experimental = "^0.0.65"
pgvector = "^0.2.5"
pypdf = "^4.3.1"
ahocorasick-rs = "^0.22.0"
sqlalchemy-utils = "^0.41.2"
langchain-openai = "^0.1.23"
pyjwt = ">=2.10.1,<3.0.0"
bcrypt = "<=4.0.0"
python-jose = ">=3.5.0,<4.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
ruff = ">=0.11.11,<0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "F", "E", "W", "U", "I", "N", "PL", "B", "RUF", "PERF", "SIM", "LOG",
    "G", "C901", "S", "TID", "TCH", "INT", "FLY002", "ISC", "ICN"
]
ignore = [
    "PLR2004", "ISC001", "N806", "B008", "PLR0913", "RUF012", "TC001", "F821"
]
exclude = [
    ".git", ".venv", ".pyenv", "venv", "__pycache__", "__target__", "dist"
]
